fixed margin collapse

--- a/src/App.css
+++ b/src/App.css
@@ -38,15 +38,18 @@ main {
 	padding: 4rem 0px;
 }
 
-.cv-form {
+.flip-container {
 	width: 90%;
 	max-width: 850px;
+}
+
+.cv-form {
 	padding: 0px 30px 20px;
 	background-color: var(--form-body);
 	-webkit-box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.3);
 	box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.3);
-	border-radius: 5px;
 	color: var(--clr-black);
+	overflow: hidden;
 }
 
 .cv-form h2 {
